--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Test</title>
+
+    <script src="main.js" type="text/javascript"></script>
   </head>
   <body>
-    <header> test </header>
+    <p> test </p>
 
-    
   </body>
 </html>
