--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
-
+    <title></title>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="main.js" type="text/javascript"></script>
   </head>
   <body>
-    <p> test </p>
-
+    <button class="search button" onclick="getGifs();">Search for a gif</button>
   </body>
 </html>
