--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <script src="main.js" type="text/javascript"></script>
   </head>
   <body>
-    <button class="search button" onclick="getGifs();">Search for a gif</button>
+    <button class="search button" onclick="getGif();">Search for a gif</button>
   </body>
 </html>
