--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 <body>
   <header>
     <div class="logo">
-      <!-- <img id="logo" src="#fill this up" /> -->
-      <p>Logo here</p>
-    </div>
-    <div class="webname">
-    	<h1>Gifs Against Humanity</h1>
-    </div>
+      <img id="logo" src="images/LOGO.png" />
   </header>
 
   <section id="phrase">
@@ -29,59 +24,52 @@
 
   <section id="chosen">
     <div class="row">
-  	  <div class="col">	
+    	<div class="col">
         <div class="row top">
-          <!-- <img id="choice" src="#put chosen gif here" /> -->
-          <p>Chosen gif here</p>
         </div>
         <div class="row bottom">
           <div class="col">
-            <p>Name: put name here</p>
           </div>
           <div class="col">
-            <p>Score: put score here</p>
           </div>
         </div>
       </div>
-      <div class="col">	
+      <div class="col">
         <div class="row top">
-          <!-- <img id="choice" src="#put chosen gif here" /> -->
-          <p>Chosen gif here</p>
+          <img class="animated-gif" id="cards" src="images/loading.png"/>
         </div>
         <div class="row bottom">
           <div class="col">
-            <p>Name: put name here</p>
+            <p>Name:</p>
           </div>
           <div class="col">
-            <p>Score: put score here</p>
+            <p>Score:</p>
           </div>
         </div>
       </div>
-      <div class="col">	
+      <div class="col">
         <div class="row top">
-          <!-- <img id="choice" src="#put chosen gif here" /> -->
-          <p>Chosen gif here</p>
+          <img class="animated-gif" id="cards" src="images/loading.png"/>
         </div>
         <div class="row bottom">
           <div class="col">
-            <p>Name: put name here</p>
+            <p>Name:</p>
           </div>
           <div class="col">
-            <p>Score: put score here</p>
+            <p>Score:</p>
           </div>
         </div>
       </div>
-      <div class="col">	
+      <div class="col">
         <div class="row top">
-          <!-- <img id="choice" src="#put chosen gif here" /> -->
-          <p>Chosen gif here</p>
+          <img class="animated-gif" id="cards" src="images/loading.png"/>
         </div>
         <div class="row bottom">
           <div class="col">
-            <p>Name: put name here</p>
+            <p>Name:</p>
           </div>
           <div class="col">
-            <p>Score: put score here</p>
+            <p>Score:</p>
           </div>
         </div>
       </div>
@@ -91,28 +79,24 @@
   <section id="gifs">
   	<div class="row bottom">
       <div class="col2">
-      	<script>getGif(cards1)</script>
-        <img id="cards1" src=""/>
+        <img class="animated-gif" id="cards1" src=""/>
       </div>
       <div class="col2">
-      	<script>getGif(cards2)</script>
-        <img id="cards2" src=""/>
+        <img class="animated-gif" id="cards2" src=""/>
       </div>
       <div class="col2">
-      	<script>getGif(cards3)</script>
-        <img id="cards3" src=""/>
+        <img class="animated-gif" id="cards3" src=""/>
       </div>
       <div class="col2">
-      	<script>getGif(cards4)</script>
-        <img id="cards4" src=""/>
+        <img class="animated-gif" id="cards4" src=""/>
       </div>
       <div class="col2">
-      	<script>getGif(cards5)</script>
-        <img id="cards5" src=""/>
+        <img class="animated-gif" id="cards5" src=""/>
       </div>
+      <script>initializeGame()</script>
     </div>
-      
-      
+
+
   </section>
 
   <footer>
